<!--
  ~ Copyright (c) 2016. Jacob Mansfield. All rights reserved
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SelectPlayersActivity">

    <TextView android:text="@string/select_num_players" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/select_num_players" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        >
    </com.google.android.gms.ads.AdView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_num_players_instructions"
        android:id="@+id/select_num_players_instructions"
        android:layout_above="@+id/select_num_players_continue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/select_num_players"
        android:layout_above="@+id/select_num_players_instructions"
        android:id="@+id/num_players_frame">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/default_num_players"
            android:id="@+id/num_players"
            android:textIsSelectable="false"
            android:textSize="75sp"
            android:layout_gravity="center" />
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_num_players_continue"
        android:id="@+id/select_num_players_continue"
        android:layout_above="@+id/adView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="19dp"
        android:onClick="onContinueClick" />
</RelativeLayout>
