<!--
  ~ Copyright (c) 2016. Jacob Mansfield. All rights reserved
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="uk.co.bluesapphiremedia.android.zombiedice.PlayActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/current_player_text"
            android:layout_centerHorizontal="true" />
        <!--android:text="@string/player_turn"-->

    </RelativeLayout>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:rowCount="3"
        android:id="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_gravity="fill_horizontal|left|right"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_turn"
                android:id="@+id/textView"
                android:layout_centerHorizontal="true"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/score_this_turn"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_gravity="fill_horizontal|left|right"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_the_bank"
                android:id="@+id/textView6"
                android:layout_centerHorizontal="true"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/score_in_bank"
                android:layout_below="@+id/textView6"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_gravity="fill_horizontal|left|right"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/needed_to_win"
                android:id="@+id/textView9"
                android:layout_centerHorizontal="true"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/score_to_win"
                android:layout_below="@+id/textView9"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_brain"
            android:id="@+id/add_brain"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_shotgun"
            android:id="@+id/add_shotgun"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_gravity="fill_horizontal|left|right"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:padding="@dimen/abc_control_padding_material">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/shotgun1"
                android:contentDescription="@string/shotgun_icon"
                android:maxWidth="20dp"
                android:maxHeight="20dp"
                android:src="@drawable/shotgun"
                android:minHeight="20dp"
                android:minWidth="20dp"
                android:layout_toLeftOf="@+id/shotgun2"
                android:layout_toStartOf="@+id/shotgun2"
                android:visibility="invisible"/>

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/shotgun2"
                android:contentDescription="@string/shotgun_icon"
                android:src="@drawable/shotgun"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"/>

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/shotgun3"
                android:contentDescription="@string/shotgun_icon"
                android:src="@drawable/shotgun"
                android:layout_toEndOf="@+id/shotgun2"
                android:layout_toRightOf="@+id/shotgun2"
                android:visibility="invisible"/>
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_brain"
            android:id="@+id/remove_brain"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_shotgun"
            android:id="@+id/remove_shotgun"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_turn"
            android:id="@+id/end_turn"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />
    </android.support.v7.widget.GridLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:id="@+id/scoreboard"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gridLayout">

    </TableLayout>

</RelativeLayout>
